--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	"image": "mcr.microsoft.com/devcontainers/go:2-trixie",
 	"features": {
 		"ghcr.io/devcontainers/features/node:1": {},
-		"ghcr.io/mikaello/devcontainer-features/modern-shell-utils:2": {}
+		"ghcr.io/mikaello/devcontainer-features/modern-shell-utils:2": {},
+		"ghcr.io/swift-server-community/swift-devcontainer-features/sqlite:1": {}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
